@@ -18,9 +18,9 @@ Check out the <a class="reference" href="examples.html">examples</a>!</p>
 <p>twill is open source and written in Python.</p>
 <div class="section" id="downloading-twill">
 <h1><a name="downloading-twill">Downloading twill</a></h1>
-<p>The latest release of twill is <a class="reference" href="ANNOUNCE-0.8.3.txt">twill 0.8.3</a>, released February 8th,
+<p>The latest release of twill is <a class="reference" href="ANNOUNCE-0.8.4.txt">twill 0.8.4</a>, released <strong>******&#64;CTB****</strong>,
 2006; it is available for download at
-<a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.8.3.tar.gz">http://darcs.idyll.org/~t/projects/twill-0.8.3.tar.gz</a>.  You can also
+<a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.8.4.tar.gz">http://darcs.idyll.org/~t/projects/twill-0.8.4.tar.gz</a>.  You can also
 use Python's <a class="reference" href="http://peak.telecommunity.com/DevCenter/EasyInstall">easy_install</a> to install or upgrade twill.</p>
 <p>twill works with Python 2.3 or later.</p>
 <p>To start using twill, install it and then type <tt class="docutils literal"><span class="pre">twill-sh</span></tt>.  At the
@@ -88,7 +88,8 @@ J. Lee has promptly and enthusiastically checked in my various patches
 to mechanize.  Michele Simionato is an early adopter who has helped
 quite a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
-MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner, and sureshvv.</p>
+MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner,  sureshvv,
+and Alexander Shvedunov.</p>
 <p>Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
 Tommi Virtanen, Simon Buenzli, and sureshvv.  Thanks!</p>
